--- a/aluno/projeto_tcc/index.html
+++ b/aluno/projeto_tcc/index.html
@@ -63,7 +63,7 @@
             <span class="tooltip">Arquivos</span>
         </li>
         <li>
-            <a href="../relatorio_banca/disponivel/">
+            <a href="../relatorio_banca/">
                 <i class="bx bx-edit"></i>
                 <span class="links_name">Relatório da banca</span>
             </a>
