Relatório da Banca

--- a/aluno/perfil/index.html
+++ b/aluno/perfil/index.html
@@ -67,7 +67,7 @@
       <span class="tooltip">Arquivos</span>
     </li>
     <li>
-      <a href="../relatorio_banca//">
+      <a href="../relatorio_banca/">
         <i class="bx bx-edit"></i>
         <span class="links_name">Relatório da banca</span>
       </a>
