--- a/aluno/relatorio_banca/index.html
+++ b/aluno/relatorio_banca/index.html
@@ -27,12 +27,12 @@
 <body>
     <header>
         <div class="primeira_parte">
-            <img src="../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
+            <img src="./../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
             <h1 id="nomeGrupoAluno">NOME DO GRUPO</h1>
         </div>
 
         <a href="../../perfil/index.html">
-            <img id="fotoPerfilAluno" src="../componentes/header/img/foto_padrao.svg" alt="foto" />
+            <img id="fotoPerfilAluno" src="./../componentes/header/img/foto_padrao.svg" alt="foto" />
         </a>
     </header>
 
@@ -43,14 +43,14 @@
         </div>
 
         <li>
-            <a href="../../projeto_tcc/index.html">
+            <a href="../projeto_tcc/index.html">
                 <i class="bx bx-info-circle"></i>
                 <span class="links_name">Informações do projeto</span>
             </a>
             <span class="tooltip">Projeto</span>
         </li>
         <li>
-            <a href="../../tarefas/">
+            <a href="../tarefas/">
                 <i class="bx bx-task"></i>
                 <span class="links_name">Tarefas</span>
             </a>
