--- a/aluno/tarefas/index.html
+++ b/aluno/tarefas/index.html
@@ -61,7 +61,7 @@
             <span class="tooltip">Arquivos</span>
         </li>
         <li>
-            <a href="../relatorio_banca/disponivel/index.html">
+            <a href="../relatorio_banca/">
                 <i class="bx bx-edit"></i>
                 <span class="links_name">Relatório da banca</span>
             </a>
