--- a/home/produto/index.html
+++ b/home/produto/index.html
@@ -13,6 +13,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet" />
+    <link rel="shortcut icon" href="../images-global/logo-azul.svg" type="image/x-icon">
     <title>Produto</title>
 </head>
 
@@ -48,7 +49,7 @@
                     <h1>Nexus Insights</h1>
                     <h2>Você tem um problema? Nós temos a solução.</h2>
                 </div>
-                <img src="./img/computador.png" alt="">
+                <img src="./img/mockup.png" alt="mockup">
             </div>
         </div>
 
