arrumando erros na tela turmas e grupos da instituição

--- a/instituicao/cursos/turmas/grupo/index.html
+++ b/instituicao/cursos/turmas/grupo/index.html
@@ -118,12 +118,12 @@
 
             <div class="data-apresentacao">
                 <h1>Data da apresentação:</h1>
-                <input type="date" id="inputDataApresentacaoProjeto">
+                <input type="date" id="inputDataApresentacaoProjeto" disabled>
             </div>
 
             <div class="hora-apresentacao">
                 <h1>Hora da apresentação:</h1>
-                <input type="time" id="inputHoraApresentacaoProjeto">
+                <input type="time" id="inputHoraApresentacaoProjeto" disabled>
             </div>
 
         </div>
